--- a/opentelemetry/single-grafana/prometheus.yml
+++ b/opentelemetry/single-grafana/prometheus.yml
@@ -2,15 +2,27 @@ storage:
   tsdb:
     path: /prometheus
 
+global:
+  scrape_interval: 15s
+
 scrape_configs:
   - job_name: 'prometheus'
     static_configs:
-      - targets: [ 'localhost:9090' ] # 监控自身指标
+      - targets: [ 'localhost:9090' ] # Monitor prometheus own metrics
   
   - job_name: 'otel-collector'
     scrape_interval: 5s
     static_configs:
-      - targets: ['otel-collector:8889'] # 监控 Collector 指标
+      - targets: ['otel-collector:8889'] # Monitor Collector metrics
   - job_name: 'loki'
     static_configs:
-      - targets: ['loki:3100'] # 监控 loki 指标
+      - targets: ['loki:3100'] # Monitor loki metrics
+  
+  - job_name: 'cadvisor'
+    static_configs:
+      - targets: ['cadvisor:8080']
+  
+  - job_name: 'node-exporter'
+    scrape_interval: 5s
+    static_configs:
+      - targets: ['node-exporter:9100']
