--- a/opentelemetry/single-grafana/docker-compose.yaml
+++ b/opentelemetry/single-grafana/docker-compose.yaml
@@ -20,7 +20,12 @@ services:
   
   node-exporter:
     image: prom/node-exporter:latest
+    command:
+      - '--path.rootfs=/host'
+    pid: host
     restart: unless-stopped
+    volumes:
+      - '/:/host:ro,rslave'
     expose:
       - 9100
 
