--- a/opentelemetry/single-grafana/docker-compose.yaml
+++ b/opentelemetry/single-grafana/docker-compose.yaml
@@ -2,6 +2,7 @@ version: '3'
 services:
   otel-collector:
     image: otel/opentelemetry-collector-contrib:0.123.0
+    restart: unless-stopped
     command: ["--config=/etc/otel-config.yaml"]
     volumes:
       - /data/docker-compose/otel-config.yaml:/etc/otel-config.yaml
@@ -42,6 +43,7 @@ services:
 
   prometheus:
     image: prom/prometheus:v3.3.0
+    restart: unless-stopped
     volumes:
       - /data/docker-compose/prometheus.yml:/etc/prometheus/prometheus.yml
       - /data/prometheus:/prometheus 
@@ -50,6 +52,7 @@ services:
 
   loki:
     image: grafana/loki:3.4.3
+    restart: unless-stopped
     ports:
       - "3100:3100"
     volumes:
@@ -59,6 +62,7 @@ services:
 
   tempo:
     image: grafana/tempo:latest
+    restart: unless-stopped
     command: ["-config.file=/etc/tempo.yaml"]
     volumes:
       - /data/docker-compose/tempo.yaml:/etc/tempo.yaml
@@ -70,6 +74,7 @@ services:
   grafana:
     container_name: grafana
     image: grafana/grafana-enterprise:11.6.0
+    restart: unless-stopped
     ports:
       - "3000:3000"
     volumes:
